# django-tutorial

./: .gitignore
django_tutorial/poll_app/poll_app/polls/: models.py  tests.py  views.py
django_tutorial/poll_app/poll_app/polls/migrations/: 0002_remove_choice_choice_textja_choice_choice_text.py
poll_app/: pyproject.toml
poll_app/poll_app/mysite/: settings.py  urls.py
poll_app/poll_app/polls/: admin.py  models.py  urls.py  views.py
poll_app/poll_app/polls/migrations/: 0001_initial.py
restframework_tutorial0/: pyproject.toml
restframework_tutorial0/tutorial/: settings.py
restframework_tutorial0/tutorial/quickstart/: serializers.py  views.py
restframework_tutorial1/: pyproject.toml
restframework_tutorial1/tutorial/snippets/: models.py  serializers.py  urls.py  views.py
restframework_tutorial1/tutorial/snippets/migrations/: 0001_initial.py
restframework_tutorial1/tutorial/tutorial/: settings.py  urls.py
