[tool.poetry]
name = "poll-app"
version = "0.1.0"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
readme = "README.md"
packages = [{include = "poll_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = "^4.1.6"


[tool.poetry.group.dev.dependencies]
django-stubs = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
